Refactoring to use Java 16